--- a/templates/privacy-policy.html
+++ b/templates/privacy-policy.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block head_title %}Prviacy Policy{% endblock %}
 {% block content %}
-<div class="rounded lg:w-1/2 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10 text-nblue" style="background-color: rgba(0, 42, 42, .6);text-align: left;"><i><p tabindex="0" class="text-nblue focus:outline-none text-2xl font-extrabold leading-6">
+<div class="rounded lg:w-1/2 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10 text-green-600" style="background-color: rgba(0, 42, 42, .6);text-align: left;"><i><p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6">
 
     <h1>Privacy Policy for Re-Dcrypt</h1>
 
