--- a/templates/public_profile.html
+++ b/templates/public_profile.html
@@ -7,13 +7,13 @@
 {% block content %}
 <div class="container flex justify-center">
 
-    <div class="rounded lg:w-3/4  md:w-3/4 w-[98%] p-10 mt-16 bg-clip-padding bg-nblue-800 backdrop-filter backdrop-blur-xl bg-opacity-60 border border-nblue mb-10 z-0" style="z-index:0">
+    <div class="rounded lg:w-3/4  md:w-3/4 w-[98%] p-10 mt-16 bg-clip-padding bg-green-800 backdrop-filter backdrop-blur-xl bg-opacity-60 border border-green-600 mb-10 z-0" style="z-index:0">
         <center>
-            <div class="rounded-full border border-nblue border-3" style="width:80px;height:80px;margin-top:-80px;background-color:#002a2a"></div>
-            <img src="{% avatar usern %}" alt="dp" class="rounded-full border border-nblue border-3" style="width:80px;height:80px;margin-top:-80px;">
-            <h1 class="text-nblue text-3xl font-bold mt-4">{{usern.username}}</h1>
+            <div class="rounded-full border border-green-600 border-3" style="width:80px;height:80px;margin-top:-80px;background-color:#002a2a"></div>
+            <img src="{% avatar usern %}" alt="dp" class="rounded-full border border-green-600 border-3" style="width:80px;height:80px;margin-top:-80px;">
+            <h1 class="text-green-600 text-3xl font-bold mt-4">{{usern.username}}</h1>
             {% if profile.is_banned %}
-            <h1 class="text-nblue text-3xl font-bold mt-4">BANNED</h1>
+            <h1 class="text-green-600 text-3xl font-bold mt-4">BANNED</h1>
             {% endif %}
             <p class="justify-between"><button type="button" class="text-white bg-gradient-to-r from-nblue-500 to-nblue-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-cyan-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mt-7 mr-2 mb-2">Score: {{ profile.score}}</button>
                 <button type="button" class="text-white bg-gradient-to-r from-nblue-500 to-nblue-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-cyan-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mt-7 mr-2 mb-2">Current Level: {{ profile.current_level}}</button>
@@ -21,12 +21,12 @@
             </p>
             {% if profile.is_public_name %}
             <p tabindex="0" class="focus:outline-none text-white text-lg p-5">
-                <label for="name" class="text-nblue text-lg"><b>Name: </b></label> {{ profile.name }}
+                <label for="name" class="text-green-600 text-lg"><b>Name: </b></label> {{ profile.name }}
             </p>
             {% endif %}
             {% if profile.is_public_organization %}
             <p tabindex="0" class="focus:outline-none text-white text-lg pb-5">
-                <label for="School/Organization" class="text-nblue text-lg"><b>School/Organization: </b></label> {{profile.organization}}
+                <label for="School/Organization" class="text-green-600 text-lg"><b>School/Organization: </b></label> {{profile.organization}}
             </p>
             {% endif %}
 
