--- a/templates/403_csrf.html
+++ b/templates/403_csrf.html
@@ -14,7 +14,7 @@
           theme: {
             extend: {
               colors: {
-                'nblue': {  DEFAULT: '#00D2D2',  '50': '#8BFFFF',  '100': '#76FFFF',  '200': '#4DFFFF',  '300': '#25FFFF',  '400': '#00FBFB',  '500': '#00D2D2',  '600': '#009A9A',  '700': '#006262',  '800': '#002A2A',  '900': '#000000'},
+                'nblue': {  DEFAULT: '#08B74F',  '50': '#8BFFFF',  '100': '#76FFFF',  '200': '#4DFFFF',  '300': '#25FFFF',  '400': '#00FBFB',  '500': '#08B74F',  '600': '#009A9A',  '700': '#006262',  '800': '#002A2A',  '900': '#000000'},
               },
               fontFamily: {
                 Inter: ['Inter'],
@@ -46,7 +46,7 @@
         
         /* Handle on hover */
         ::-webkit-scrollbar-thumb:hover {
-          background: #00D2D2;
+          background: #08B74F;
         }
       </style>
       <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -59,12 +59,12 @@
       
     <center>
         <div class="justify-center">
-            <div class="rounded lg:w-1/3  md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-nblue focus:outline-none text-2xl font-extrabold leading-6"><!--<span class="text-7xl">500</span><br>Server Error</i>
-            </p><hr class="mt-3 mb-3 border-nblue">-->
+            <div class="rounded lg:w-1/3  md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6"><!--<span class="text-7xl">500</span><br>Server Error</i>
+            </p><hr class="mt-3 mb-3 border-green-600">-->
                 <div class="">
                    CRSF Error. Try again after refreshing, if problem persist, contact DiluteWater#3149 on discord.
                     <img src="https://static.redcrypt.ml/500.svg" alt="500" class="max-h-[80vh]" style=""></img></div>
-                    <span class="text-xs text-nblue"><i><a href="https://storyset.com/internet" class="hover:text-white">Internet illustrations by Storyset</a></i></span>
+                    <span class="text-xs text-green-600"><i><a href="https://storyset.com/internet" class="hover:text-white">Internet illustrations by Storyset</a></i></span>
         </div>
 
     </center>  
