--- a/templates/about.html
+++ b/templates/about.html
@@ -8,128 +8,132 @@
 {% endblock %}
 {% block content %}
 <div class="justify-center">
-    <div class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-nblue focus:outline-none text-2xl font-extrabold leading-6">
-        <span class="text-2xl">About</span>
+    <div class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-5 mt-16 bg-neutral-900/70 shadow-inset-white backdrop-blur-xl border border-green-600 mb-10">
+        <i><p tabindex="0" class="text-neutral-100 focus:outline-none text-2xl font-extrabold leading-6">
+            <span class="text-2xl">About</span>
+        </p></i>
     </div>
 
-<div class="container mx-0 flex flex-wrap items-center content-start">
-    <div class="lg:justify-self-end lg:place-self-center ml-8 lg:fixed lg:self-start lg:w-2/6 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue rounded-lg p-8 flex flex-col md:ml-auto w-[98%] p-0 m-2 h-[50%]" style="background-color: rgba(0, 42, 42, .6);">
-        <model-viewer bounds="tight" enable-pan src="{% static 'scene.glb' %}" camera-controls environment-image="neutral" poster="{% static 'poster.png' %}" shadow-intensity="1" class="w-full lg:h-96 h-72" style="">
-
-    </div>
-    <div class="lg:w-3/5 flex flex-col md:ml-auto w-full">
-    <div class="bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue rounded-lg p-8 text-nblue m-2" style="background-color: rgba(0, 42, 42, .6);">
-        <p>Re-Dcrypt is a cryptic hunt organised by some passionate students.
-            <br>
-            <button class="mt-5 bg-nblue-800 hover:bg-nblue-500 hover:text-black border border-nblue hover:border-black text-nblue font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="window.location.href={% url 'rules' %}">
-              Rules
-            </button>     
-            <button class="mt-5 bg-nblue-800 hover:bg-nblue-500 hover:text-black border border-nblue hover:border-black text-nblue font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="window.location.href={% url 'faqs' %}">
-              FAQs
-            </button>
-            <button class="mt-5 bg-nblue-800 hover:bg-nblue-500 hover:text-black border border-nblue hover:border-black text-nblue font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="window.location.href={% url 'guidelines' %}">
-              Guidelines
-            </button>
-            <a href="/discord">
-            <button class="mt-5 bg-nblue-800 hover:bg-nblue-500 hover:text-black border border-nblue hover:border-black text-nblue font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
-              Discord Server
-            </button>
-            </a>
-            <p class="text-nblue text-xs"><a href="/terms-and-conditions/"><u>Terms of Service</u></a> and <a href = "/privacy-policy/"><u>Privacy Policy</u></a></p>
-        </p>
-        <hr class="border border-nblue my-5">
-        <a href="mailto:hunt@redcrypt.xyz">
-          <i class='bx bxs-envelope text-4xl'></i>
-        </a>
-        <a href="/discord">
-          <i class='bx bxl-discord-alt text-4xl'></i>
-        </a>
-        <a href="https://instagram.com/re.dcrypt">
-          <i class='bx bxl-instagram text-4xl' ></i>
-        </a>
-        <a href="https://www.youtube.com/channel/UCPX97SUuKIr-ngxzvcAlEFQ">
-          <i class='bx bxl-youtube text-4xl' ></i>
-        </a>
-        <a href="https://github.com/Re-Dcrypt">
-          <i class='bx bxl-github text-4xl' ></i>
-        </a>
-        <a href="https://www.reddit.com/r/redcrypt/">
-          <i class='bx bxl-reddit text-4xl'></i>
-        </a>
-      </div>
-    <div data-aos="zoom-in-up" class="w-[98%] rounded p-5 mt-11 ml-3 text-nblue bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10" style="background-color: rgba(0, 42, 42, .6);"><i>
-      <p tabindex="0" class="text-nblue focus:outline-none text-2xl font-extrabold leading-6">
-      <span class="text-5xl">Prizes</span></i>
-      <table class="table-auto text-2xl border-collapse border border-nblue mt-5">
-        <thead>
-          <tr>
-            <th class="border border-nblue p-5">Rank</th>
-            <th class="border border-nblue p-5">Prizes</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="border border-nblue p-5"><b>Top 3</b></td>
-            <td class="border border-nblue p-5">
-              <ul class="list-disc list-inside text-lg">
-              <li>Taskade Unlimited for Lifetime</li>
-              <li> 1 year <code>.xyz</code> domain</li>
-              <li>Certificate of appreciation</li>
-              </ul>
-            </td>
-          </tr>          
-          <tr>
-            <td class="border border-nblue p-5">Top 10</td>
-            <td class="border border-nblue p-5">
-              <ul class="list-disc list-inside text-lg">
-              <li>Taskade Unlimited for Lifetime</li>
-              <li> 1 year <code>.xyz</code> domain</li>
-              <li>Certificate of participation</li>
-              </ul>
-            </td>
-          </tr>
-          <tr>
-            <td class="border border-nblue p-5">Top 40</td>
-            <td class="border border-nblue p-5">
-              <ul class="list-disc list-inside text-lg">
-              <li>Taskade Unlimited for 5 years</li>
-              <li> 1 year <code>.xyz</code> domain</li>
-              <li>Certificate of participation</li>
-              </ul>
-            </td>
-          </tr>          
-          <tr>
-            <td class="border border-nblue p-5">Everyone</td>
-            <td class="border border-nblue p-5">
-              <ul class="list-disc list-inside text-lg">
-              <li>Taskade Unlimited for 5 years</li>
-              <li>Certificate of participation</li>
-              </ul>
-            </td>
-          </tr>
-
-        </tbody>
-      </table>
-    </div> 
-    
-    <div data-aos="zoom-in-up" class="w-[98%] rounded p-5 mt-11 ml-3 text-nblue bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10" style="background-color: rgba(0, 42, 42, .6);"><i>
-      <p tabindex="0" class="text-nblue focus:outline-none text-2xl font-extrabold leading-6">
-      <span class="text-5xl">Sponsors</span></i>
-      <div class="flex place-content-center">
-        <a href="https://www.taskade.com/">
-          <img src="/sponsors/logo_taskade_white.png" alt="taskade" class="max-h-20 mx-3">
-        </a>
-        <a href="https://gen.xyz/">
-          <img src="/sponsors/xyz-logo-white.svg" alt="gen.xyz" class="max-h-20 mx-3">
-        </a>
-      </div>
-    </div>     
-
-
-    </div>
-
-
-  </div></div>
+    <div class="container mx-0 flex flex-wrap items-center content-start">
+        <div class="lg:justify-self-end lg:place-self-center ml-8 lg:fixed lg:self-start lg:w-2/6 bg-neutral-900/70 shadow-inset-white backdrop-blur-xl border border-green-600 rounded-lg p-8 flex flex-col md:ml-auto w-[98%] p-0 m-2 h-[50%]">
+            <model-viewer bounds="tight" enable-pan src="{% static 'scene.glb' %}" camera-controls environment-image="neutral" poster="{% static 'poster.png' %}" shadow-intensity="1" class="w-full lg:h-96 h-72" style="">
+        </div>
+        
+        <div class="lg:w-3/5 flex flex-col md:ml-auto w-full">
+            <div class="bg-neutral-900/70 shadow-inset-white backdrop-blur-xl border border-green-600 rounded-lg p-8 text-neutral-100 m-2">
+                <p>Re-Dcrypt is a cryptic hunt organised by some passionate students.
+                    <br>
+                    <div class="button-container mt-5">
+                        <button class="mt-5 bg-green-800 hover:bg-nblue-500 hover:text-black border border-green-600 hover:border-black text-green-600 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="window.location.href={% url 'rules' %}">
+                          Rules
+                        </button>     
+                        <button class="mt-5 bg-green-800 hover:bg-nblue-500 hover:text-black border border-green-600 hover:border-black text-green-600 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="window.location.href={% url 'faqs' %}">
+                          FAQs
+                        </button>
+                        <button class="mt-5 bg-green-800 hover:bg-nblue-500 hover:text-black border border-green-600 hover:border-black text-green-600 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="window.location.href={% url 'guidelines' %}">
+                          Guidelines
+                        </button>
+                        <a href="/discord">
+                        <button class="mt-5 bg-green-800 hover:bg-nblue-500 hover:text-black border border-green-600 hover:border-black text-green-600 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+                          Discord Server
+                        </button>
+                        </a>
+                    </div>
+                    <p class="text-green-600 text-xs"><a href="/terms-and-conditions/"><u>Terms of Service</u></a> and <a href = "/privacy-policy/"><u>Privacy Policy</u></a></p>
+                </p>
+                <hr class="border border-green-600 my-5">
+                <a href="mailto:hunt@redcrypt.xyz">
+                  <i class='bx bxs-envelope text-4xl'></i>
+                </a>
+                <a href="/discord">
+                  <i class='bx bxl-discord-alt text-4xl'></i>
+                </a>
+                <a href="https://instagram.com/re.dcrypt">
+                  <i class='bx bxl-instagram text-4xl' ></i>
+                </a>
+                <a href="https://www.youtube.com/channel/UCPX97SUuKIr-ngxzvcAlEFQ">
+                  <i class='bx bxl-youtube text-4xl' ></i>
+                </a>
+                <a href="https://github.com/Re-Dcrypt">
+                  <i class='bx bxl-github text-4xl' ></i>
+                </a>
+                <a href="https://www.reddit.com/r/redcrypt/">
+                  <i class='bx bxl-reddit text-4xl'></i>
+                </a>
+            </div>
+            <div data-aos="zoom-in-up" class="w-[98%] rounded p-5 mt-11 ml-3 text-green-600 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10" style="background-color: rgba(0, 42, 42, .6);"><i>
+              <p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6">
+              <span class="text-5xl">Prizes</span></i>
+              <table class="table-auto text-2xl border-collapse border border-green-600 mt-5">
+                <thead>
+                  <tr>
+                    <th class="border border-green-600 p-5">Rank</th>
+                    <th class="border border-green-600 p-5">Prizes</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="border border-green-600 p-5"><b>Top 3</b></td>
+                    <td class="border border-green-600 p-5">
+                      <ul class="list-disc list-inside text-lg">
+                      <li>Taskade Unlimited for Lifetime</li>
+                      <li> 1 year <code>.xyz</code> domain</li>
+                      <li>Certificate of appreciation</li>
+                      </ul>
+                    </td>
+                  </tr>          
+                  <tr>
+                    <td class="border border-green-600 p-5">Top 10</td>
+                    <td class="border border-green-600 p-5">
+                      <ul class="list-disc list-inside text-lg">
+                      <li>Taskade Unlimited for Lifetime</li>
+                      <li> 1 year <code>.xyz</code> domain</li>
+                      <li>Certificate of participation</li>
+                      </ul>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="border border-green-600 p-5">Top 40</td>
+                    <td class="border border-green-600 p-5">
+                      <ul class="list-disc list-inside text-lg">
+                      <li>Taskade Unlimited for 5 years</li>
+                      <li> 1 year <code>.xyz</code> domain</li>
+                      <li>Certificate of participation</li>
+                      </ul>
+                    </td>
+                  </tr>          
+                  <tr>
+                    <td class="border border-green-600 p-5">Everyone</td>
+                    <td class="border border-green-600 p-5">
+                      <ul class="list-disc list-inside text-lg">
+                      <li>Taskade Unlimited for 5 years</li>
+                      <li>Certificate of participation</li>
+                      </ul>
+                    </td>
+                  </tr>
+        
+                </tbody>
+              </table>
+            </div> 
+            
+            <div data-aos="zoom-in-up" class="w-[98%] rounded p-5 mt-11 ml-3 text-green-600 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10" style="background-color: rgba(0, 42, 42, .6);"><i>
+              <p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6">
+              <span class="text-5xl">Sponsors</span></i>
+              <div class="flex place-content-center">
+                <a href="https://www.taskade.com/">
+                  <img src="/sponsors/logo_taskade_white.png" alt="taskade" class="max-h-20 mx-3">
+                </a>
+                <a href="https://gen.xyz/">
+                  <img src="/sponsors/xyz-logo-white.svg" alt="gen.xyz" class="max-h-20 mx-3">
+                </a>
+              </div>
+            </div>     
+        
+        
+            </div>
+        
+        
+          </div></div>
 {% endblock content %}
 {% block scripts %}
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
