--- a/templates/account/email/email_confirmation_signup_message.html
+++ b/templates/account/email/email_confirmation_signup_message.html
@@ -1,17 +1,53 @@
-{% extends "account/email/base_message.html" %}
-{% load account %}
-{% load i18n %}
-
-{% block content %}{% user_display user as user_display %}Welcome to Re-Dcrypt, {{ user_display }}.
-<br><span style="color: #00d2d2;">Hope you will have fun solving questions. Best of luck!!<br>
-Please confirm your email below. </span>
-<br>
+{% extends "account/email/base_message.html" %} {% load account %} {% load i18n
+%} {% block content %}{% user_display user as user_display %}Welcome to
+Re-Dcrypt, {{ user_display }}. <br /><span style="color: #08b74f"
+  >Hope you will have fun solving questions. Best of luck!!<br />
+  Please confirm your email below.
+</span>
+<br />
 
 <div align="center">
-    <a href="{{ activate_url }}">
-    <div style="text-decoration:none;display:inline-block;color:#000000;background-color:#00D2D2;border-radius:4px;width:auto;padding-top:5px;padding-bottom:5px;font-family:Open Sans, Helvetica Neue, Helvetica, Arial, sans-serif;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:20px;padding-right:20px;font-size:16px;display:inline-block;letter-spacing:normal;"><span style="font-size: 16px; line-height: 2; word-break: break-word; mso-line-height-alt: 32px;">Activate Email</span></span></div>
-    </a>
+  <a href="{{ activate_url }}">
+    <div
+      style="
+        text-decoration: none;
+        display: inline-block;
+        color: #000000;
+        background-color: #08b74f;
+        border-radius: 4px;
+        width: auto;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        font-family: Open Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
+        text-align: center;
+        mso-border-alt: none;
+        word-break: keep-all;
+      "
+    >
+      <span
+        style="
+          padding-left: 20px;
+          padding-right: 20px;
+          font-size: 16px;
+          display: inline-block;
+          letter-spacing: normal;
+        "
+        ><span
+          style="
+            font-size: 16px;
+            line-height: 2;
+            word-break: break-word;
+            mso-line-height-alt: 32px;
+          "
+          >Activate Email</span
+        ></span
+      >
+    </div>
+  </a>
 </div>
-<br>
-<span style="color: #00d2d2">If the above button isn't working then try copying and pasting the following link into your browser: {{ activate_url }}</span>
+<br />
+<span style="color: #08b74f"
+  >If the above button isn't working then try copying and pasting the following
+  link into your browser: {{ activate_url }}</span
+>
 {% endblock %}
