--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,39 +7,39 @@
 }
 label[for=id_login],label[for=id_password]{
   display:block;
-  color:#00D2D2;
+  color:#08B74F;
 }
 label[for=id_remember]{
-  color:#00D2D2;
+  color:#08B74F;
 }
 input#id_login,input#id_password,button#submit{
-  border: 2px solid #00D2D2;
+  border: 2px solid #08B74F;
   border-radius: 5px;
-  placeholder-color: #00D2D2;
+  placeholder-color: #08B74F;
   background: rgba( 0, 0, 0, 0.3 );
   box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
   backdrop-filter: blur( 13.5px );
   -webkit-backdrop-filter: blur( 13.5px );
-  color: #00D2D2;
+  color: #08B74F;
   width: 100%;
   margin-bottom: 15px;
   padding: 7px;
 }
 input#id_login:focus,input#id_password:focus{
   outline: 2px solid black;
-  background: #00D2D2;
+  background: #08B74F;
   color: black;
 }
 input#id_login::placeholder,input#id_password::placeholder{
   opacity: 0;
 }
 button#submit:hover{
-  background: #00D2D2;
+  background: #08B74F;
   color: black;
   border: 2px solid black;
 }
 hr{
-  border-top: 2px solid #00D2D2;
+  border-top: 2px solid #08B74F;
 }
 </style>
 {% endblock%}
@@ -48,17 +48,17 @@ hr{
     {% csrf_token %}
 <div class="container flex justify-center">
 
-<div class="rounded lg:w-1/3  md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10" style="background-color: rgba(0, 42, 42, .6);">
-    <center><p tabindex="0" class="text-nblue focus:outline-none text-2xl font-extrabold leading-6">Login to your account</p>
-    <p tabindex="0" class="text-nblue focus:outline-none text-sm mt-4 font-medium leading-none">Dont have account? <br><a href="{% url 'account_signup' %}"   class="hover:text-white focus:text-gray-500 focus:outline-none focus:underline hover:underline text-sm font-medium leading-none cursor-pointer"> Sign up here</a></p>
+<div class="rounded lg:w-1/3  md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10" style="background-color: rgba(0, 42, 42, .6);">
+    <center><p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6">Login to your account</p>
+    <p tabindex="0" class="text-green-600 focus:outline-none text-sm mt-4 font-medium leading-none">Dont have account? <br><a href="{% url 'account_signup' %}"   class="hover:text-white focus:text-gray-500 focus:outline-none focus:underline hover:underline text-sm font-medium leading-none cursor-pointer"> Sign up here</a></p>
     <div class="w-full flex items-center justify-between py-5">
          <hr class="w-full bg-nblue-500">
         </div>
         {{ form.as_p }}</center>
         <div class="mt-8">
-            <button role="button" id="submit" class="border border-nblue focus:ring-2 focus:ring-offset-2 focus:ring-indigo-700 text-sm font-semibold leading-none text-white focus:outline-none rounded hover:bg-nblue-500 hover:text-black py-4 w-full">Login</button>
+            <button role="button" id="submit" class="border border-green-600 focus:ring-2 focus:ring-offset-2 focus:ring-indigo-700 text-sm font-semibold leading-none text-white focus:outline-none rounded hover:bg-nblue-500 hover:text-black py-4 w-full">Login</button>
         </div>
-        <i class="text-nblue hover:text-white hover:underline"> <a href="{% url 'account_reset_password' %}">Forgot Password?</a>
+        <i class="text-green-600 hover:text-white hover:underline"> <a href="{% url 'account_reset_password' %}">Forgot Password?</a>
 
 </div></div></form>
 {% endblock %}
