--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,64 +1,77 @@
-{% extends "base.html" %}
-
-{% load i18n %}
-{% load account %}
-{% block head_title %}Password Reset{% endblock %}
-{% block head %}
+{% extends "base.html" %} {% load i18n %} {% load account %} {% block head_title
+%}Password Reset{% endblock %} {% block head %}
 <style>
-label[for=id_email]{
-    display:block;
-    color:#00D2D2;
-    }
-label[for=id_hcaptcha]{
-    display:none;
-}
-.errorlist{
-    color:red;
-}
-input#id_email,button#submit{
-    border: 2px solid #00D2D2;
+  label[for="id_email"] {
+    display: block;
+    color: #08b74f;
+  }
+  label[for="id_hcaptcha"] {
+    display: none;
+  }
+  .errorlist {
+    color: red;
+  }
+  input#id_email,
+  button#submit {
+    border: 2px solid #08b74f;
     border-radius: 5px;
-    placeholder-color: #00D2D2;
-    background: rgba( 0, 0, 0, 0.3 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 13.5px );
-    -webkit-backdrop-filter: blur( 13.5px );
-    color: #00D2D2;
+    placeholder-color: #08b74f;
+    background: rgba(0, 0, 0, 0.3);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    color: #08b74f;
     width: 100%;
     margin-bottom: 15px;
     padding: 7px;
-    }
-input#id_email:focus{
-outline: 2px solid black;
-background: #00D2D2;
-color: black;
-}
-input#id_email::placeholder{
+  }
+  input#id_email:focus {
+    outline: 2px solid black;
+    background: #08b74f;
+    color: black;
+  }
+  input#id_email::placeholder {
     opacity: 0;
   }
-button#submit:hover{
-    background: #00D2D2;
+  button#submit:hover {
+    background: #08b74f;
     color: black;
     border: 2px solid black;
   }
 </style>
-{% endblock %}
-{% block content %}
-<div class="rounded lg:w-1/3  md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10 text-nblue" style="background-color: rgba(0, 42, 42, .6);">
-    <h1 class="text-nblue focus:outline-none text-2xl font-extrabold leading-6">{% trans "Password Reset" %}</h1>
-    <hr class="mt-3 mb-3 border-nblue">
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
+{% endblock %} {% block content %}
+<div
+  class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10 text-green-600"
+  style="background-color: rgba(0, 42, 42, 0.6)"
+>
+  <h1
+    class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6"
+  >
+    {% trans "Password Reset" %}
+  </h1>
+  <hr class="mt-3 mb-3 border-green-600" />
+  {% if user.is_authenticated %} {% include
+  "account/snippets/already_logged_in.html" %} {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+  <p>
+    {% trans "Forgotten your password? Enter your e-mail address below, and
+    we'll send you an e-mail allowing you to reset it." %}
+  </p>
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset text-nblue">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" id="submit" class="mt-5">{% trans 'Reset My Password' %}</button>
-    </form>
+  <form
+    method="POST"
+    action="{% url 'account_reset_password' %}"
+    class="password_reset text-green-600"
+  >
+    {% csrf_token %} {{ form.as_p }}
+    <button type="submit" id="submit" class="mt-5">
+      {% trans 'Reset My Password' %}
+    </button>
+  </form>
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+  <p>
+    {% blocktrans %}Please contact us if you have any trouble resetting your
+    password.{% endblocktrans %}
+  </p>
 </div>
 {% endblock %}
