--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -1,18 +1,22 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {% load i18n %} {% load account %} {% block head_title
+%}{% trans "Password Reset" %}{% endblock %} {% block content %}
+<div
+  class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10 text-green-600"
+  style="background-color: rgba(0, 42, 42, 0.6)"
+>
+  <h1
+    class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6"
+  >
+    {% trans "Password Reset" %}
+  </h1>
+  <hr class="mt-3 mb-3 border-green-600" />
+  {% if user.is_authenticated %} {% include
+  "account/snippets/already_logged_in.html" %} {% endif %}
 
-{% load i18n %}
-{% load account %}
-
-{% block head_title %}{% trans "Password Reset" %}{% endblock %}
-
-{% block content %}
-<div class="rounded lg:w-1/3  md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10 text-nblue" style="background-color: rgba(0, 42, 42, .6);">
-    <h1 class="text-nblue focus:outline-none text-2xl font-extrabold leading-6">{% trans "Password Reset" %}</h1>
-    <hr class="mt-3 mb-3 border-nblue">
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    
-    <p>{% blocktrans %}We have sent you an e-mail. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}</p>
+  <p>
+    {% blocktrans %}We have sent you an e-mail. If you have not received it
+    please check your spam folder. Otherwise contact us if you do not receive it
+    in a few minutes.{% endblocktrans %}
+  </p>
 </div>
-    {% endblock %}
+{% endblock %}
