--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,12 +1,15 @@
-{% extends "account/base.html" %}
-
-{% load i18n %}
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
-
-{% block content %}
-<div class="rounded lg:w-1/3  md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10 text-nblue" style="background-color: rgba(0, 42, 42, .6);">
-    <h1 class="text-nblue focus:outline-none text-2xl font-extrabold leading-6">{% trans "Change Password" %}</h1>
-    <hr class="mt-3 mb-3 border-nblue">
-    <p>{% trans 'Your password is now changed.' %}</p>
+{% extends "account/base.html" %} {% load i18n %} {% block head_title %}{% trans
+"Change Password" %}{% endblock %} {% block content %}
+<div
+  class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10 text-green-600"
+  style="background-color: rgba(0, 42, 42, 0.6)"
+>
+  <h1
+    class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6"
+  >
+    {% trans "Change Password" %}
+  </h1>
+  <hr class="mt-3 mb-3 border-green-600" />
+  <p>{% trans 'Your password is now changed.' %}</p>
 </div>
 {% endblock %}
