--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,69 +1,100 @@
-{% extends "base.html" %}
-{% block head_title %}Signup{% endblock %}
-{% block head %} 
+{% extends "base.html" %} {% block head_title %}Signup{% endblock %} {% block
+head %}
 <style>
-.errorlist{
-    color:red;
-}
-label{
-  display:block;
-  margin-bottom:5px;
-  color:#00D2D2;
-}
-label[for="id_hcaptcha"]{
-  display:none;
-}
-#id_hcaptcha{
-  margin-top:20px;
-}
-input,input#id_name,input#id_organization,input#id_username,input#id_email,input#id_password1,input#id_password2,button#submit{
-    border: 2px solid #00D2D2;
+  .errorlist {
+    color: red;
+  }
+  label {
+    display: block;
+    margin-bottom: 5px;
+    color: #08b74f;
+  }
+  label[for="id_hcaptcha"] {
+    display: none;
+  }
+  #id_hcaptcha {
+    margin-top: 20px;
+  }
+  input,
+  input#id_name,
+  input#id_organization,
+  input#id_username,
+  input#id_email,
+  input#id_password1,
+  input#id_password2,
+  button#submit {
+    border: 2px solid #08b74f;
     border-radius: 5px;
-    placeholder-color: #00D2D2;
-    background: rgba( 0, 0, 0, 0.3 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 13.5px );
-    -webkit-backdrop-filter: blur( 13.5px );
-    color: #00D2D2;
+    placeholder-color: #08b74f;
+    background: rgba(0, 0, 0, 0.3);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    color: #08b74f;
     width: 100%;
     margin-bottom: 15px;
     padding: 7px;
   }
-  input:focus{
+  input:focus {
     outline: 2px solid black;
-    background: #00D2D2;
+    background: #08b74f;
     color: black;
   }
-  input::placeholder{
+  input::placeholder {
     opacity: 0;
-    color: #002A2A;
+    color: #002a2a;
   }
-  button#submit:hover{
-    background: #00D2D2;
+  button#submit:hover {
+    background: #08b74f;
     color: black;
     border: 2px solid black;
   }
-hr{
-  border-top: 2px solid #00D2D2;
-}
+  hr {
+    border-top: 2px solid #08b74f;
+  }
 </style>
-{% endblock %}
-{% block content %}
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-    {% csrf_token %}
-<div class="container flex justify-center">
-
-<div class="rounded lg:w-1/3  md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 border border-nblue mb-10 -z-1" style="background-color: rgba(0, 42, 42, .6);">
-    <center><p tabindex="0" class="focus:outline-none text-2xl font-extrabold leading-6 text-nblue">Sign Up</p>
-    <div class="w-full flex items-center justify-between py-5">
-         <hr class="w-full bg-nblue-500">
+{% endblock %} {% block content %}
+<form
+  class="signup"
+  id="signup_form"
+  method="post"
+  action="{% url 'account_signup' %}"
+>
+  {% csrf_token %}
+  <div class="container flex justify-center">
+    <div
+      class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 border border-green-600 mb-10 -z-1"
+      style="background-color: rgba(0, 42, 42, 0.6)"
+    >
+      <center>
+        <p
+          tabindex="0"
+          class="focus:outline-none text-2xl font-extrabold leading-6 text-green-600"
+        >
+          Sign Up
+        </p>
+        <div class="w-full flex items-center justify-between py-5">
+          <hr class="w-full bg-nblue-500" />
         </div>
 
-        {{ form.as_p }}</center>
-        <div class="mt-8">
-            <button role="button" id="submit" class="border border-nblue focus:ring-2 focus:ring-offset-2 focus:ring-indigo-700 text-sm font-semibold leading-none text-white focus:outline-none rounded hover:bg-nblue-500 hover:text-black py-4 w-full">Sign Up</button>
-            <p class="text-nblue text-xs">By clicking the "Sign up" button, you are creating an account, and agree to Re-Dcrypt's <a href="/terms-and-conditions/">Terms of Service</a> and <a href = "/privacy-policy/">Privacy Policy </a></p>
-        </div>
-
-</div></div></form>
+        {{ form.as_p }}
+      </center>
+      <div class="mt-8">
+        <button
+          role="button"
+          id="submit"
+          class="border border-green-600 focus:ring-2 focus:ring-offset-2 focus:ring-indigo-700 text-sm font-semibold leading-none text-white focus:outline-none rounded hover:bg-nblue-500 hover:text-black py-4 w-full"
+        >
+          Sign Up
+        </button>
+        <p class="text-green-600 text-xs">
+          By clicking the "Sign up" button, you are creating an account, and
+          agree to Re-Dcrypt's
+          <a href="/terms-and-conditions/">Terms of Service</a> and
+          <a href="/privacy-policy/">Privacy Policy </a>
+        </p>
+      </div>
+    </div>
+  </div>
+</form>
 {% endblock %}
