--- a/templates/complete.html
+++ b/templates/complete.html
@@ -3,13 +3,13 @@
 {% block head_title %}Completed{% endblock %}
 {% block content %}
 <div class="justify-center">
-    <div class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-nblue focus:outline-none text-2xl font-extrabold leading-6">
+    <div class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6">
         <span class="text-2xl">Congratulations!!</span>
     </div>
-    <div class="rounded lg:w-1/2 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-nblue focus:outline-none text-2xl font-extrabold leading-6">
-        You Have successfully completed the hunt. <hr class="mt-3 mb-3 border-nblue">
+    <div class="rounded lg:w-1/2 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6">
+        You Have successfully completed the hunt. <hr class="mt-3 mb-3 border-green-600">
         <img src="{% static 'congrats.svg' %}" alt="congrats" class="max-h-[80vh] w-1/2" style=""></img>
-        <span class="text-xs text-nblue"><i><a href="https://storyset.com/internet" class="hover:text-white">Internet illustrations by Storyset</a></i></span>
+        <span class="text-xs text-green-600"><i><a href="https://storyset.com/internet" class="hover:text-white">Internet illustrations by Storyset</a></i></span>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/party-js@latest/bundle/party.min.js"></script>
