--- a/templates/contact_form.html
+++ b/templates/contact_form.html
@@ -5,7 +5,7 @@
 <style>
     label{
         display:block;
-        color:#00D2D2;
+        color:#08B74F;
         }
     label[for=id_hCaptcha]{
         display:none;
@@ -14,25 +14,25 @@
         color:red;
     }
     input,textarea,button#submit{
-        border: 2px solid #00D2D2;
+        border: 2px solid #08B74F;
         border-radius: 5px;
-        placeholder-color: #00D2D2;
+        placeholder-color: #08B74F;
         background: rgba( 0, 0, 0, 0.3 );
         box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
         backdrop-filter: blur( 13.5px );
         -webkit-backdrop-filter: blur( 13.5px );
-        color: #00D2D2;
+        color: #08B74F;
         width: 100%;
         margin-bottom: 15px;
         padding: 7px;
         }
     input:focus,textarea:focus{
         outline: 2px solid black;
-        background: #00D2D2;
+        background: #08B74F;
         color: black;
     }
     button#submit:hover{
-        background: #00D2D2;
+        background: #08B74F;
         color: black;
         border: 2px solid black;
     }
@@ -40,16 +40,16 @@
 {% endblock %}
 {% block content %}
 <div class="justify-center">
-    <div class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-nblue focus:outline-none text-2xl font-extrabold leading-6">
+    <div class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6">
         <span class="text-2xl">Contact Us</span>
     </div>
-    <div class="rounded lg:w-1/2 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-nblue focus:outline-none text-2xl font-extrabold leading-6">
-        You can contact us by emailing us at <a href="mailto:admin@redcryp.ml" class="text-nblue hover:text-nblue-500">admin@redcrypt.ml</a> {% if user.is_authenticated %}or by filling out the form below if you are logged in.
-        <hr class="border border-nblue mt-5 mb-5">
+    <div class="rounded lg:w-1/2 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6">
+        You can contact us by emailing us at <a href="mailto:admin@redcryp.ml" class="text-green-600 hover:text-nblue-500">admin@redcrypt.ml</a> {% if user.is_authenticated %}or by filling out the form below if you are logged in.
+        <hr class="border border-green-600 mt-5 mb-5">
         <form action="{% url 'contact_form_submit' %}" method="POST" id="contact">
             {{form}}
             {% csrf_token %} 
-            <button type="submit" class="bg-nblue-500 hover:bg-nblue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" id="submit">Submit</button>
+            <button type="submit" class="bg-nblue-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" id="submit">Submit</button>
         </form>{% endif %}
     </div>
 </div>
