--- a/templates/ended.html
+++ b/templates/ended.html
@@ -3,8 +3,8 @@
 {% block head_title %}Event Ended{% endblock %}
 {% block content %}
 <div class="justify-center">
-    <div class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-nblue focus:outline-none text-2xl font-extrabold leading-6"><span class="text-4xl">Thank You</span><br>
-        <span>The Event has ended succesfully</span></i><br><br><a href="{% url 'leaderboard' %}" class="text-nblue hover:text-nblue-500 focus:outline-none text-l font-extrabold leading-6">Check out leaderboard</a></p></div>
+    <div class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6"><span class="text-4xl">Thank You</span><br>
+        <span>The Event has ended succesfully</span></i><br><br><a href="{% url 'leaderboard' %}" class="text-green-600 hover:text-nblue-500 focus:outline-none text-l font-extrabold leading-6">Check out leaderboard</a></p></div>
     </p>
 
 </div>
