--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -11,94 +11,94 @@ svg[data-accordion-icon],accordion-flush-body-1{
 </style>
 {% endblock %}
 <div class="justify-center">
-    <div class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-nblue focus:outline-none text-2xl font-extrabold leading-6">
+    <div class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6">
         <span class="text-2xl"><a href="https://redcrypt.xyz/spelling">FAQs</a></span>
     </div>
-    <div class="rounded lg:w-1/2 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-nblue focus:outline-none text-2xl font-extrabold leading-6">
+    <div class="rounded lg:w-1/2 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6">
         <!-- FAQ -->
-        <div id="accordion-flush" data-accordion="collapse" data-active-classes="text-nblue-200" data-inactive-classes="text-nblue">
+        <div id="accordion-flush" data-accordion="collapse" data-active-classes="text-nblue-200" data-inactive-classes="text-green-600">
             <h2 id="accordion-flush-heading-1">
-              <button type="button" class="flex justify-between items-center py-5 w-full font-medium text-left text-nblue border-b border-nblue" data-accordion-target="#accordion-flush-body-1" aria-expanded="true" aria-controls="accordion-flush-body-1">
+              <button type="button" class="flex justify-between items-center py-5 w-full font-medium text-left text-green-600 border-b border-green-600" data-accordion-target="#accordion-flush-body-1" aria-expanded="true" aria-controls="accordion-flush-body-1">
                 <span>What is Re-Dcrypt?</span>
                 <svg data-accordion-icon class="w-6 h-6 rotate-180 shrink-0" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
               </button>
             </h2>
             <div id="accordion-flush-body-1" class="hidden" aria-labelledby="accordion-flush-heading-1">
-              <div class="py-5 border-l border-r border-b border-dashed border-nblue backdrop-filter backdrop-blur-xl bg-opacity-60">
-                <p class="mb-2 text-nblue">Re-Dcrypt is a cryptic hunt</p>
+              <div class="py-5 border-l border-r border-b border-dashed border-green-600 backdrop-filter backdrop-blur-xl bg-opacity-60">
+                <p class="mb-2 text-green-600">Re-Dcrypt is a cryptic hunt</p>
               </div>
             </div>
             <!-- FAQ -->
             <h2 id="accordion-flush-heading-2">
-              <button type="button" class="flex justify-between items-center py-5 w-full font-medium text-left text-nblue border-b border-nblue" data-accordion-target="#accordion-flush-body-2" aria-expanded="true" aria-controls="accordion-flush-body-2">
+              <button type="button" class="flex justify-between items-center py-5 w-full font-medium text-left text-green-600 border-b border-green-600" data-accordion-target="#accordion-flush-body-2" aria-expanded="true" aria-controls="accordion-flush-body-2">
                 <span>What is a cryptic hunt?</span>
                 <svg data-accordion-icon class="w-6 h-6 rotate-180 shrink-0" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
               </button>
             </h2>
             <div id="accordion-flush-body-2" class="hidden" aria-labelledby="accordion-flush-heading-2">
-              <div class="py-5 border-l border-r border-b border-dashed border-nblue backdrop-filter backdrop-blur-xl bg-opacity-60">
-                <p class="mb-2 text-nblue">Cryptic hunt is an online treasure hunt, in which you will be provided a question, maybe a few hint and you have to find the answer, you can expect yourself to look for clues all over the internet, using ciphers, extracting metadata or just figuring out the popculture reference.</p>
+              <div class="py-5 border-l border-r border-b border-dashed border-green-600 backdrop-filter backdrop-blur-xl bg-opacity-60">
+                <p class="mb-2 text-green-600">Cryptic hunt is an online treasure hunt, in which you will be provided a question, maybe a few hint and you have to find the answer, you can expect yourself to look for clues all over the internet, using ciphers, extracting metadata or just figuring out the popculture reference.</p>
               </div>
             </div>
         <!-- FAQ end -->
             <h2 id="accordion-flush-heading-3">
-              <button type="button" class="flex justify-between items-center py-5 w-full font-medium text-left text-nblue border-b border-nblue" data-accordion-target="#accordion-flush-body-3" aria-expanded="true" aria-controls="accordion-flush-body-3">
+              <button type="button" class="flex justify-between items-center py-5 w-full font-medium text-left text-green-600 border-b border-green-600" data-accordion-target="#accordion-flush-body-3" aria-expanded="true" aria-controls="accordion-flush-body-3">
                 <span>Where will I get hints?</span>
                 <svg data-accordion-icon class="w-6 h-6 rotate-180 shrink-0" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
               </button>
             </h2>
             <div id="accordion-flush-body-3" class="hidden" aria-labelledby="accordion-flush-heading-3">
-              <div class="py-5 border-l border-r border-b border-dashed border-nblue backdrop-filter backdrop-blur-xl bg-opacity-60">
-                <p class="mb-2 text-nblue">Hints will be provided directly on the play page itself. However, you may find some exclusive hints on the discord server, site notifications, social media etc. So make sure you follow us everywhere. We highly recommend you to join our discord server, follow us on social platforms and enable site notifications.</p>
+              <div class="py-5 border-l border-r border-b border-dashed border-green-600 backdrop-filter backdrop-blur-xl bg-opacity-60">
+                <p class="mb-2 text-green-600">Hints will be provided directly on the play page itself. However, you may find some exclusive hints on the discord server, site notifications, social media etc. So make sure you follow us everywhere. We highly recommend you to join our discord server, follow us on social platforms and enable site notifications.</p>
               </div>
             </div>
             <h2 id="accordion-flush-heading-4">
-              <button type="button" class="flex justify-between items-center py-5 w-full font-medium text-left text-nblue border-b border-nblue" data-accordion-target="#accordion-flush-body-4" aria-expanded="true" aria-controls="accordion-flush-body-4">
+              <button type="button" class="flex justify-between items-center py-5 w-full font-medium text-left text-green-600 border-b border-green-600" data-accordion-target="#accordion-flush-body-4" aria-expanded="true" aria-controls="accordion-flush-body-4">
                 <span>Will there be lead confirmation?</span>
                 <svg data-accordion-icon class="w-6 h-6 rotate-180 shrink-0" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
               </button>
             </h2>
             <div id="accordion-flush-body-4" class="hidden" aria-labelledby="accordion-flush-heading-4">
-              <div class="py-5 border-l border-r border-b border-dashed border-nblue backdrop-filter backdrop-blur-xl bg-opacity-60">
-                <p class="mb-2 text-nblue">Yes, you can confirm leads on the discord server. But you are required to connect you discord account for leads confirmation</p>
+              <div class="py-5 border-l border-r border-b border-dashed border-green-600 backdrop-filter backdrop-blur-xl bg-opacity-60">
+                <p class="mb-2 text-green-600">Yes, you can confirm leads on the discord server. But you are required to connect you discord account for leads confirmation</p>
               </div>
             </div>
             <h2 id="accordion-flush-heading-5">
-              <button type="button" class="flex justify-between items-center py-5 w-full font-medium text-left text-nblue border-b border-nblue" data-accordion-target="#accordion-flush-body-5" aria-expanded="true" aria-controls="accordion-flush-body-5">
+              <button type="button" class="flex justify-between items-center py-5 w-full font-medium text-left text-green-600 border-b border-green-600" data-accordion-target="#accordion-flush-body-5" aria-expanded="true" aria-controls="accordion-flush-body-5">
                 <span>Where is the discord server invite?</span>
                 <svg data-accordion-icon class="w-6 h-6 rotate-180 shrink-0" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
               </button>
             </h2>
             <div id="accordion-flush-body-5" class="hidden" aria-labelledby="accordion-flush-heading-5">
-              <div class="py-5 border-l border-r border-b border-dashed border-nblue backdrop-filter backdrop-blur-xl bg-opacity-60">
-                <p class="mb-2 text-nblue">You can join the discord server here:</p>
-                <button class="mt-5 bg-nblue-800 hover:bg-nblue-500 hover:text-black border border-nblue hover:border-black text-nblue font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+              <div class="py-5 border-l border-r border-b border-dashed border-green-600 backdrop-filter backdrop-blur-xl bg-opacity-60">
+                <p class="mb-2 text-green-600">You can join the discord server here:</p>
+                <button class="mt-5 bg-green-800 hover:bg-nblue-500 hover:text-black border border-green-600 hover:border-black text-green-600 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
                   Discord Server
                 </button>
               </div>
             </div>
             <h2 id="accordion-flush-heading-6">
-              <button type="button" class="flex justify-between items-center py-5 w-full font-medium text-left text-nblue border-b border-nblue" data-accordion-target="#accordion-flush-body-6" aria-expanded="true" aria-controls="accordion-flush-body-6">
+              <button type="button" class="flex justify-between items-center py-5 w-full font-medium text-left text-green-600 border-b border-green-600" data-accordion-target="#accordion-flush-body-6" aria-expanded="true" aria-controls="accordion-flush-body-6">
                 <span>How can I claim easter eggs?</span>
                 <svg data-accordion-icon class="w-6 h-6 rotate-180 shrink-0" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
               </button>
             </h2>
             <div id="accordion-flush-body-6" class="hidden" aria-labelledby="accordion-flush-heading-6">
-              <div class="py-5 border-l border-r border-b border-dashed border-nblue backdrop-filter backdrop-blur-xl bg-opacity-60">
-                <p class="mb-2 text-nblue">You can claim easter eggs through the official bot in the discord server. More details will be vailable in the discord server itself.</p>
+              <div class="py-5 border-l border-r border-b border-dashed border-green-600 backdrop-filter backdrop-blur-xl bg-opacity-60">
+                <p class="mb-2 text-green-600">You can claim easter eggs through the official bot in the discord server. More details will be vailable in the discord server itself.</p>
               </div>
             </div>
-            <button class="mt-5 bg-nblue-800 hover:bg-nblue-500 hover:text-black border border-nblue hover:border-black text-nblue font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="window.location.href={% url 'rules' %}">
+            <button class="mt-5 bg-green-800 hover:bg-nblue-500 hover:text-black border border-green-600 hover:border-black text-green-600 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="window.location.href={% url 'rules' %}">
               Rules
             </button>
-            <button class="mt-5 bg-nblue-800 hover:bg-nblue-500 hover:text-black border border-nblue hover:border-black text-nblue font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="window.location.href={% url 'about' %}">
+            <button class="mt-5 bg-green-800 hover:bg-nblue-500 hover:text-black border border-green-600 hover:border-black text-green-600 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="window.location.href={% url 'about' %}">
               About
             </button>
-            <button class="mt-5 bg-nblue-800 hover:bg-nblue-500 hover:text-black border border-nblue hover:border-black text-nblue font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="window.location.href={% url 'guidelines' %}">
+            <button class="mt-5 bg-green-800 hover:bg-nblue-500 hover:text-black border border-green-600 hover:border-black text-green-600 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="window.location.href={% url 'guidelines' %}">
               Guidelines
             </button> 
             <a href="/discord">
-            <button class="mt-5 bg-nblue-800 hover:bg-nblue-500 hover:text-black border border-nblue hover:border-black text-nblue font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+            <button class="mt-5 bg-green-800 hover:bg-nblue-500 hover:text-black border border-green-600 hover:border-black text-green-600 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
               Discord Server
             </button>
             </a>
