--- a/templates/guidelines.html
+++ b/templates/guidelines.html
@@ -7,41 +7,41 @@
 
 {% block content %}
 <div class="justify-center">
-    <div class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-nblue focus:outline-none text-2xl font-extrabold leading-6">
+    <div class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6">
         <span class="text-2xl"><a href="https://redcrypt.xyz/engine">General Guidelines</a></span></i>
     </div>
-    <div class="rounded lg:w-1/2 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10 text-nblue" style="background-color: rgba(0, 42, 42, .6);"><p tabindex="0" class="text-nblue focus:outline-none text-2xl font-extrabold leading-6">
+    <div class="rounded lg:w-1/2 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10 text-green-600" style="background-color: rgba(0, 42, 42, .6);"><p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6">
       <ul class="list-inside">
-        <li class="mt-5 mb-5">Answer can lie anywhere on the internet</li> <hr class="border border-nblue-700">
-        <li class="mt-5 mb-5">No answer will be behind any paywalled service. <br> You don't need to spend a single rupee for any answer</li><hr class="border border-nblue-700">
-        <li class="mt-5 mb-5">If you came across something, but have no idea how to proceed,<br>try putting it in the url after the domain(without slash `/`). The domain is also used as a url shortner.<br></li><hr class="border border-nblue-700">
-        <li class="mt-5 mb-5">You will be required to visit a number of different sites on the internet to find the answer</li><hr class="border border-nblue-700">
-        <li class="mt-5 mb-5">If you came accross any image, remeber that steganography can also be a case</li><hr class="border border-nblue-700 mb-5">
-        <li class="mt-5 mb-5">If a question requires some kind of decoding, its decoder will be easily available on the internet for free.</li><hr class="border border-nblue-700 mb-5">
-        <li class="mt-5 mb-5">Every small detail is important.</li><hr class="border border-nblue-700 mb-5">
-        <li class="mt-5 mb-5">Make sure to follow us everywhere, we will be dropping hints and easter eggs anywhere..</li><hr class="border border-nblue-700 mb-5">
-        <li class="mt-5 mb-5">We recommend you to use a chromium based browser. The site is available both on mobile and desktop. You can download it's app on all platforms as well. However, we recommend you to use your desktop for main solving.</li><hr class="border border-nblue-700 mb-5">
-        <li class="mt-5 mb-5">Easter Eggs can be claimed through the official bot in our discord server.</li><hr class="border border-nblue-700 mb-5">
+        <li class="mt-5 mb-5">Answer can lie anywhere on the internet</li> <hr class="border border-green-600">
+        <li class="mt-5 mb-5">No answer will be behind any paywalled service. <br> You don't need to spend a single rupee for any answer</li><hr class="border border-green-600">
+        <li class="mt-5 mb-5">If you came across something, but have no idea how to proceed,<br>try putting it in the url after the domain(without slash `/`). The domain is also used as a url shortner.<br></li><hr class="border border-green-600">
+        <li class="mt-5 mb-5">You will be required to visit a number of different sites on the internet to find the answer</li><hr class="border border-green-600">
+        <li class="mt-5 mb-5">If you came accross any image, remeber that steganography can also be a case</li><hr class="border border-green-600 mb-5">
+        <li class="mt-5 mb-5">If a question requires some kind of decoding, its decoder will be easily available on the internet for free.</li><hr class="border border-green-600 mb-5">
+        <li class="mt-5 mb-5">Every small detail is important.</li><hr class="border border-green-600 mb-5">
+        <li class="mt-5 mb-5">Make sure to follow us everywhere, we will be dropping hints and easter eggs anywhere..</li><hr class="border border-green-600 mb-5">
+        <li class="mt-5 mb-5">We recommend you to use a chromium based browser. The site is available both on mobile and desktop. You can download it's app on all platforms as well. However, we recommend you to use your desktop for main solving.</li><hr class="border border-green-600 mb-5">
+        <li class="mt-5 mb-5">Easter Eggs can be claimed through the official bot in our discord server.</li><hr class="border border-green-600 mb-5">
       </ul>
     </p>
     You can checkout an amazing learning resources by Hitarth Khurana for Coreana  <span class="material-symbols-outlined">
       expand_circle_down
       </span><br><a href="https://docs.google.com/document/d/1XxcwC54mz6HLrnXiPDgAb0Qzatu56Bb2nOJhRQPBGBI/edit?usp=sharing" target="_blank">
-      <button class="mt-5 bg-nblue-800 hover:bg-nblue-500 hover:text-black border border-nblue hover:border-black text-nblue font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+      <button class="mt-5 bg-green-800 hover:bg-nblue-500 hover:text-black border border-green-600 hover:border-black text-green-600 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
         Learning resources
       </button></a></p>
-    <hr class="border border-2 border-nblue mt-5">
-    <button class="mt-5 bg-nblue-800 hover:bg-nblue-500 hover:text-black border border-nblue hover:border-black text-nblue font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="window.location.href={% url 'rules' %}">
+    <hr class="border border-2 border-green-600 mt-5">
+    <button class="mt-5 bg-green-800 hover:bg-nblue-500 hover:text-black border border-green-600 hover:border-black text-green-600 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="window.location.href={% url 'rules' %}">
       Rules
     </button>     
-    <button class="mt-5 bg-nblue-800 hover:bg-nblue-500 hover:text-black border border-nblue hover:border-black text-nblue font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="window.location.href={% url 'faqs' %}">
+    <button class="mt-5 bg-green-800 hover:bg-nblue-500 hover:text-black border border-green-600 hover:border-black text-green-600 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="window.location.href={% url 'faqs' %}">
       FAQs
     </button>
-    <button class="mt-5 bg-nblue-800 hover:bg-nblue-500 hover:text-black border border-nblue hover:border-black text-nblue font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="window.location.href={% url 'about' %}">
+    <button class="mt-5 bg-green-800 hover:bg-nblue-500 hover:text-black border border-green-600 hover:border-black text-green-600 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="window.location.href={% url 'about' %}">
       About
     </button>
     <a href="/discord">
-    <button class="mt-5 bg-nblue-800 hover:bg-nblue-500 hover:text-black border border-nblue hover:border-black text-nblue font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+    <button class="mt-5 bg-green-800 hover:bg-nblue-500 hover:text-black border border-green-600 hover:border-black text-green-600 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
       Discord Server
     </button>
     </a>
