--- a/templates/not_active.html
+++ b/templates/not_active.html
@@ -3,13 +3,13 @@
 {% block head_title %}{{title}}{% endblock %}
 {% block content %}
 <div class="justify-center">
-    <div class="rounded lg:w-1/3  md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-nblue focus:outline-none text-2xl font-extrabold leading-6"><span class="text-4xl">{{heading}}</span><br>
+    <div class="rounded lg:w-1/3  md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6"><span class="text-4xl">{{heading}}</span><br>
         <br><span>{{subheading}}</span></i>
     </p>
     {% if time %}
-    <hr class="mt-3 mb-3 border-nblue">
-    <p class="text-nblue text-lg font-medium leading-6"><br>
-        <span id="countdown_d" class="inline-block mt-2 text-2xl bg-nblue-800 border border-nblue rounded mr-3 p-3"></span><span id="countdown_h" class="inline-block mt-2 text-2xl bg-nblue-800 border border-nblue rounded mr-3 p-3"></span><span id="countdown_m" class="inline-block mt-2 text-2xl bg-nblue-800 border border-nblue rounded mr-3 p-3"></span><span id="countdown_s" class="inline-block mt-2 text-2xl bg-nblue-800 border border-nblue rounded mr-3 p-3"></span>
+    <hr class="mt-3 mb-3 border-green-600">
+    <p class="text-green-600 text-lg font-medium leading-6"><br>
+        <span id="countdown_d" class="inline-block mt-2 text-2xl bg-green-800 border border-green-600 rounded mr-3 p-3"></span><span id="countdown_h" class="inline-block mt-2 text-2xl bg-green-800 border border-green-600 rounded mr-3 p-3"></span><span id="countdown_m" class="inline-block mt-2 text-2xl bg-green-800 border border-green-600 rounded mr-3 p-3"></span><span id="countdown_s" class="inline-block mt-2 text-2xl bg-green-800 border border-green-600 rounded mr-3 p-3"></span>
         <script>
             var countDownDate = new Date("{{time}}").getTime();
             console.log(countDownDate);
