--- a/templates/shortner.html
+++ b/templates/shortner.html
@@ -1,12 +1,10 @@
-{% extends "base.html" %}
-
-{% load i18n %}
-
-{% block head_title %}{{ urlname }}{% endblock %}
-
-{% block content %}
-<div class="rounded lg:w-1/3  md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-nblue-700 border border-nblue mb-10 text-nblue" style="background-color: rgba(0, 42, 42, .6);">
-    {{ content | safe }}  
+{% extends "base.html" %} {% load i18n %} {% block head_title %}{{ urlname }}{%
+endblock %} {% block content %}
+<div
+  class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10 text-green-600"
+  style="background-color: rgba(0, 42, 42, 0.6)"
+>
+  {{ content | safe }}
 </div>
 
 {% endblock %}
